test/tests/stages/17_supporting_dynamic_memory_allocation/valid/libraries/pass_alloced_memory.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[88]:
  void
  *
  identifier(calloc)
  (
  unsigned
  long
  identifier(nmemb)
  ,
  unsigned
  long
  identifier(size)
  )
  ;
  void
  *
  identifier(memset)
  (
  void
  *
  identifier(s)
  ,
  int
  identifier(c)
  ,
  unsigned
  long
  identifier(n)
  )
  ;
  void
  identifier(free)
  (
  void
  *
  identifier(ptr)
  )
  ;
  void
  *
  identifier(get_100_zeroed_bytes)
  (
  void
  )
  {
  return
  identifier(calloc)
  (
  const int(100)
  ,
  const int(1)
  )
  ;
  }
  void
  identifier(fill_100_bytes)
  (
  void
  *
  identifier(pointer)
  ,
  int
  identifier(byte)
  )
  {
  identifier(memset)
  (
  identifier(pointer)
  ,
  identifier(byte)
  ,
  const int(100)
  )
  ;
  }
  void
  identifier(free_bytes)
  (
  void
  *
  identifier(ptr)
  )
  {
  identifier(free)
  (
  identifier(ptr)
  )
  ;
  }
