test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/return_void_as_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  void
  *
  identifier(x)
  (
  void
  )
  {
  return
  (
  void
  )
  const int(0)
  ;
  }
